--- a/index.html
+++ b/index.html
@@ -1,94 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-        <div id="head-er">
-          <h2>Loisa</h2>
-        </div>
-        <div id="icon-s">
-          <a class="btn btn-default" href="">Twitter</a>
-          <a class="btn btn-default" href="">Github</a>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <div id="head-er">
+        <h2>Loisa</h2>
       </div>
-      <div class="card-body">
-        <p id="im-age">
-          <img
-            class="im-age"
-            src="images/octocat-dp.png"
-            alt="Loisa Kitakaya"
-          />
-        </p>
-        <div>
-          <p id="te-xt">
-            lipsum dolor sit, amet consectetur adipisicing elit. Magnam illum
-            modi voluptate, quod, reprehenderit pariatur odio totam non, nemo
-            nam amet nostrum similique! Distinctio ab dolorum nostrum velit hic
-            doloribus facere ex molestias non eius sapiente fuga assumenda
-            voluptate tempore neque, minima in reiciendis. Repellat, maxime?
-            Possimus voluptatibus accusamus eum autem reprehenderit quos
-            nemofacere quidem!
-          </p>
-        </div>
+      <div id="icon-s">
+        <a class="btn btn-default" href="">Twitter</a>
+        <a class="btn btn-default" href="">Github</a>
       </div>
-      <div class="ca-rd-body">
-        <h2 id="project-head">Recent Projects</h2>
-        <p id="project-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea aliquam
-          neque adipisci facilis cupiditate accusantium unde excepturi, nam
-          delectus distinctio molestias placeat libero dolor voluptatum
-          provident. Assumenda ducimus iure perspiciatis.
-        </p>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card cnt-txt">
-              <h3>First Website</h3>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Molestiae, distinctio!
-              </p>
-              <a id="project-links" href="">live</a>
-              <a id="project-links" href="">repo</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card cnt-txt">
-              <h3>First Website</h3>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Molestiae, distinctio!
-              </p>
-              <a id="project-links" href="">live</a>
-              <a id="project-links" href="">repo</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card cnt-txt">
-              <h3>First Website</h3>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Molestiae, distinctio!
-              </p>
-              <a id="project-links" href="">live</a>
-              <a id="project-links" href="">repo</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="foo-ter">
-        <p>
-          <span id="email">Email: loisakitakaya@gmail.com</span>
-          <span id="rights">Copy &copy; 2019 Loisa Kitakaya</span>
+    </div>
+    <div class="card-body">
+      <p id="im-age">
+        <img class="im-age" src="images/octocat-dp.png" alt="Loisa Kitakaya" />
+      </p>
+      <div>
+        <p id="te-xt">
+          <!-- Change made on this detail -->
+          I am Loisa Kitakaya, I love programming wit all my mind, heart and strength. I started doing this when stane
+          age was never in existance.
         </p>
       </div>
     </div>
-  </body>
+    <div class="ca-rd-body">
+      <h2 id="project-head">Recent Projects</h2>
+      <p id="project-text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea aliquam
+        neque adipisci facilis cupiditate accusantium unde excepturi, nam
+        delectus distinctio molestias placeat libero dolor voluptatum
+        provident. Assumenda ducimus iure perspiciatis.
+      </p>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card cnt-txt">
+            <h3>First Website</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, distinctio!
+            </p>
+            <a id="project-links" href="">live</a>
+            <a id="project-links" href="">repo</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card cnt-txt">
+            <h3>First Website</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, distinctio!
+            </p>
+            <a id="project-links" href="">live</a>
+            <a id="project-links" href="">repo</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card cnt-txt">
+            <h3>First Website</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, distinctio!
+            </p>
+            <a id="project-links" href="">live</a>
+            <a id="project-links" href="">repo</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="foo-ter">
+      <p>
+        <span id="email">Email: loisakitakaya@gmail.com</span>
+        <span id="rights">Copy &copy; 2019 Loisa Kitakaya</span>
+      </p>
+    </div>
+  </div>
+</body>
+
 </html>
